--- a/src/templates/views/home2.ejs
+++ b/src/templates/views/home2.ejs
@@ -18,9 +18,7 @@
     
     
 
-            <a id="usr"><%=user.name%></a>
-        
-           
+        <a id="usr"><%=user.name%></a> 
         <a href="/profile/<%=user._id%>" id="prof">Profile</a>
       
              
@@ -34,25 +32,7 @@
    
 
 
-      <!-- <script type="text/javascript">
-      const buttons= document.querySelectorAll('a');
-      buttons.forEach(btn=>{
-          btn.addEventListener('click',function(e){
-              let x=e.clientX-e.target.offsetLeft;
-              let y=e.clientY-e.target.offsetTop;
-
-              let ripples= document.createElement('span');
-              ripples.style.left=x+'px';
-              ripples.style.top=y+'px';
-              this.appendChild(ripples);
-              setTimeout(()=>{
-                  ripples.remove()
-              },1000);
-          })
-      }) -->
-  
-</script>
-
+   
 
 
 
@@ -63,8 +43,8 @@
 
 
 
-   <!-- <script src="../jq/jquery.js" type="text/javascript"></script>
-   <script src="../js/bootstrap.js" type="text/javascript"></script> -->
+   <script src="../jq/jquery.js" type="text/javascript"></script>
+   <script src="../js/bootstrap.js" type="text/javascript"></script>
 
 </body>
 </html>
