--- a/public/style.css
+++ b/public/style.css
@@ -10,29 +10,34 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #F8F8F8;
+    background-image: url("chatbackground.jpg");
+    background-size: cover;
     font-family: 'Roboto', sans-serif;
 }
 section.chat__section {
-    width: 800px;
+    border-radius: 10px;
+    width: 500px;
+    height: 500px;
     max-width: 90%;
-    background: #fff;
+    background: #767b7c;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 .brand {
-    padding: 20px;
-    background: #f1f1f1;
+    border-radius: 10px;
+   
+    padding: 9px;
+    background: #223e69;
     display: flex;
     align-items: center;
 }
 .brand h1 {
     text-transform: uppercase;
     font-size: 20px;
-    color: #444;
+    color: white;
     margin-left: 10px;
 }
 .message__area{
-    height: 500px;
+    height: 400px;
     padding: 16px;
     display: flex;
     flex-direction: column;
@@ -40,6 +45,7 @@ section.chat__section {
     padding-top: 40px;
 }
 textarea {
+    border-radius: 8px;
     width: 100%;
     border: none;
     padding: 20px;
