--- a/src/templates/views/profile.ejs
+++ b/src/templates/views/profile.ejs
@@ -22,6 +22,11 @@
     <li><a href="/<%=user._id%>/userstore">lended items</a></li>
     
    </ul>
+
+
+   <form action="/profile" method="post">
+    <input type="text" value="" placeholder="Dinesh Kumar Paliwal">
+   </form>
      
 
   
