--- a/src/templates/views/userstore.ejs
+++ b/src/templates/views/userstore.ejs
@@ -3,39 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" type="text/css" href="/store.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>my lending</h1>
-    <table>
-        <tr>
-            <th scope="col">
-                objectname
-            </th>
-            <th scope="col">
-                objectprice
-            </th>
-            <th scope="col">
-                returnDate
-            </th>
-            <th scope="col">
-                status
-            </th>
-            
-        </tr>
-        <tbody>
-            <% if(record.length>0){%>
-            <%record.forEach(function(element){%>
+    
+     
+
+    <div class="div3">
+        <table id="mytable" class="content-table">
+            <thead>
                 <tr>
-                    <td><%=element.name%></td>
-                    <td><%=element.price%></td>
-                    <td><%=element.time%></td>
-                    <td><%=element.status%></td>
-                </tr>    
-                <%})%>
-                <%}%>
-        </tbody>
-    </table>
+                    <th> Name</th>
+                    <th>Price</th>
+                    <th>returnDate</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% if(record.length>0){%>
+                    <%record.forEach(function(element){%>
+                     
+                            <tr>
+                                <td>
+                                    <%=element.name%>
+                                </td>
+                                <td>
+                                    <%=element.price%>
+                                </td>
+                                <td>
+                                    <%=element.time%>
+                                </td>
+                               
+                                <td>
+                                    <%=element.status%>
+                                </td>
+                
+                            </tr>
+                        
+                                <%})%>
+                             <%}%>
+            </tbody>
+        </table>
+    </div>
+</body>
 </body>
 </html>
