--- a/src/templates/views/borrowpage.ejs
+++ b/src/templates/views/borrowpage.ejs
@@ -32,6 +32,14 @@
         <br>
       <a href="/<%=user._id%>/<%=record._id%>/purchased">would you like to buy,please conform it after contact with seller</a> -->
         
+
+      <div>
+        <button class="button-34"  onclick="history.back()">🔙</button>
+      </div>
+      
+
+
+
         <div class="container">
           <div class="card">
             <div class="circle">
@@ -82,7 +90,7 @@
                   <polyline points="179,1 179,59 1,59 1,1 179,1" class="bg-line" />
                   <polyline points="179,1 179,59 1,59 1,1 179,1" class="hl-line" />
                 </svg>
-                <span>Click to conform!</span>
+                <span>Click to confirm!</span>
                 
               </button>
             </div>
