--- a/src/templates/views/borrowstore.ejs
+++ b/src/templates/views/borrowstore.ejs
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-
+ 
     <div class="div3">
         <table id="mytable" class="content-table">
             <thead>
@@ -41,7 +41,7 @@
                                 <td>
                                     <%=element.sellerphone%>
                                 </td>
-                                <td><a href="/<%=element.buyerid%>/<%=element.name%>/borrowstore/return">return now</a></td>
+                                <td> <button><a href="/<%=element.buyerid%>/<%=element.name%>/borrowstore/return" class="buy">Return Now</a></button>    </td>
                 
                             </tr>
                             <%}%>
