--- a/src/templates/views/home.ejs
+++ b/src/templates/views/home.ejs
@@ -6,60 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Document</title>
 </head>
 <body>
 
-      <!-- <button class="btn" onclick="location.href='/signup'  ">SignUp</button>     do not remove this comment as buttons should be outside body for linking  -->
-    <!-- <button class="btn2">Login</button>     -->
 
-           <div class="container">
-            <h1>beStow...</h1>
-            <h4>Where all Individual's Unite!</h4>
-            <img src="/logo.png " class="img" alt="logo">
-             <div class="wrapper">
-                
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-
-             </div>
-           </div>            
-     
-<a href="/login">   <button class="btn2">login</button>    </a>
-    <a href="/signup">  <button class="btn"> SignUp</button>   </a>
+<div class="side-nav">
+  <div class="tag">
+    All About Happiness!
+  </div>
+</div>
 
 
+<div class="header">
+  <a href="/login">   <button class="btn2">login</button>    </a>
+  <a href="/signup">  <button class="btn"> SignUp</button>   </a>
+ </div>
 
 
+<div class="text-box">
+  <p>  <span>W</span>E ASSIST YOU TO</p>
+  <h1>Lend a Helping Hand!</h1>
+</div>
+  
 
-
-
-
-
-
-
-
-
-
-
- 
-
-    
-   
      
 
-
+          
 
    <script src="../jq/jquery.js" type="text/javascript"></script>
    <script src="../js/bootstrap.js" type="text/javascript"></script>
