--- a/public/category.css
+++ b/public/category.css
@@ -2,6 +2,15 @@ body{
     background:url(table.jpg);
     background-size: cover;
 }
+
+h1{
+    color: #fff;
+    text-align: center;
+    font-style: sans-serif;
+    font-size: 5rem;
+    margin-top: 20px;
+
+}
 .content-table{
     border: 1px solid black;
     border-collapse: collapse;
