--- a/public/home.css
+++ b/public/home.css
@@ -1,188 +1,155 @@
+
+
 *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: cursive;
+    margin: 0px;
+    padding: 0px;
+    align-items: center;
+}
+body{
+    justify-content: center;
+    min-height: 100vh;
+    align-items: center;
+    background: #000942;
+    /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(5,12,55,1) 34%, rgba(11,23,25,1) 85%);  */
+      overflow: hidden;
+}
+/* 
+i{
+    color: rgba(0,0,0,0.7);
+    transition: 1s;
+    padding: 0.5px;
+    user-select: none;
+    
 }
 
-body{
-    background:linear-gradient(45deg ,#d2001a,#7462ff,#f48e21,#23d5ab);
-    background-size: 300% 300%;
-    animation: color 12s ease-in-out infinite;
+i:hover{
+    transition: 0s;
+    color: cyan;
+    text-shadow: 0 0 120px cyan;
+    transform: scale(10px);
 }
-@keyframes color{
+
+
+section .row{
+    
+    position: absolute;
+    width: 100%;
+    display: flex;
+    white-space: nowrap;
+    font-size: 40px;
+   
+
+
+}
+section .row div{
+    animation: animate 3s linear infinite;
+} */
+/* @keyframes animate{
     0%{
-        background-position: 0 50%;
+        transform: translateX(5%);
     }
     50%{
-        background-position: 100% 50%;
-
+        transform: translateX(-5%);
     }
     100%{
-        background-position: 0 50%;
+        transform: translateX(5%);
     }
-}
+} */
 
-.container{
+
+.side-nav{
+    position: fixed;
+    background: linear-gradient(#00bcd4, #e91e63,#3f51b5,#00bcd4);
+    left: 0;
+    top: 0;
+    width: 100px;
     height: 100vh;
-    width: 100%;
-    }
-
-
-    .btn{
-        width: 130px;
-        height: 40px;
-        background: transparent;
-        position: absolute;
-        border: 1px solid black;
-        border-radius: 20px;
-        cursor: pointer;
-        left: 81%;
-        top: 9%;
-        transition: color 0.4s linear;
-    }
-    .btn2{
-        width: 130px;
-        height: 40px;
-        background: transparent;
-        position: absolute;
-        border: 1px solid black;
-        border-radius: 20px;
-        cursor: pointer;
-        left: 70%;
-        top: 9%;
-        transition: color 0.4s linear ;
-        
-    }
-
-h1{
-    position: absolute;
-    top: 50%;
-    left: 80%;
-    transform: translate(-50%,-50%);
-    font-size: 5.5rem;
-    color: white;
-    letter-spacing: 3px;
+    flex-direction: column;
+    background-size: 100% 500%;
+    background-position: 0 40%;
 }
 
-h4{
-    position: absolute;
-    top: 60%;
-    left: 78%;
-    transform: translate(-50%,-50%);
-    font-size: 1.5rem;
-    color: white;
-    
-    
+.side-nav:hover{
+animation: backcolor 20s linear infinite reverse;
 }
-.img{
-    position: absolute;
-    height: 200px;
-    width: 200px;
-    top: -0.5%;
-    left: 1%;
-    
-
-    
-}
-
-.wrapper{
-width: 100%;
-height: 100%;
-position: relative;
-}
-
-.wrapper div{
-    width: 70px;
-    height: 70px;
-    border: 3px solid white;
-    position: absolute;
-}
-
-.wrapper div:nth-child(1){
-    top: 20%;
-    left: 40%;
-    animation: square 5s linear infinite;
-
-}
-.wrapper div:nth-child(2){
-    top: 10%;
-    left: 60%;
-    animation: square 5s linear infinite;
-    
-}
-.wrapper div:nth-child(3){
-    top: 90%;
-    left: 10%;
-    animation: square 5s linear infinite;
-    
-}
-.wrapper div:nth-child(4){
-    top: 50%;
-    left: 40%;
-    animation: square 5s linear infinite;
-    
-}
-.wrapper div:nth-child(5){
-    top: 40%;
-    left: 60%;
-    animation: square 5s linear infinite;
-    
-}
-.wrapper div:nth-child(6){
-    top: 80%;
-    left: 30%;
-    animation: square 5s linear infinite;
-    
-}
-.wrapper div:nth-child(7){
-    top: 10%;
-    left: 10%;
-    animation: square 5s linear infinite;
-    
-}
-.wrapper div:nth-child(8){
-    top: 20%;
-    left: 85%;
-    animation: square 5s linear infinite;
-    
-}.wrapper div:nth-child(9){
-    top: 75%;
-    left: 65%;
-    animation: square 5s linear infinite;
-    
-}.wrapper div:nth-child(10){
-    top: 80%;
-    left: 85%;
-    animation: square 5s linear infinite;
-    
-}
-.wrapper div:nth-child(11){
-    top: 60%;
-    left: 90%;
-    animation: square 5s linear infinite;}
-
-    .wrapper div:nth-child(12){
-        top: 50%;
-        left: 20%;
-        animation: square 5s linear infinite;}
-
-        .wrapper div:nth-child(13){
-            top: 45%;
-            left: 2%;
-            animation: square 5s linear infinite;}
-
-
-
-@keyframes square{
+@keyframes backcolor{
     0%{
-        transform: scale(0) translateY(0) rotate(180deg);
-        opacity: 1;
+        background-position: 0 0%;
     }
     100%{
-        transform: scale(1.2) translateY(-90px) rotate(360deg) ;
-        opacity: 0;
+        background-position: 0 400%;
     }
 }
+.side-nav .tag{
+ text-transform: capitalize;
+ /* font-style: Roboto Condensed;  */
+ color: whitesmoke;
+ transform: rotate(-90deg) translateX(-400%) translateY(-50%);
+ width: max-content;
+
+}
+
+.header{
+    background-image: url(home.png);
+    width: 100%;
+    height: 100vh;
+    background-size: 40%;
+    background-repeat: no-repeat;
+    background-position: 100% 100%;
+    
+   
+   
+}
+
+.text-box{
+    position: fixed;
+    top: 50%;
+    left: 100px;
+    font-size: 20px;
+    color: #fff;
+}
+.text-box h1{
+   font-weight: 500 ;
+   font-size: 86px;
+   max-width: 750px;
+   line-height: 85px;
+}
+.text-box span{
+    font-size: 30px;
+}
+
+.btn2{
+    position: absolute;
+    left: 75%;
+    top: 10%;
+    text-align: right;
+    text-decoration: none;
+    background: #e91e63;
+    color: white;
+    border: 0;
+    outline: 0;
+    border-radius: 30px;
+    padding: 10px 20px;
+    cursor: pointer;
+
+
+   }
+.btn{
+    
+        position: absolute;
+        left: 85%;
+        top: 10%;
+        text-align: right;
+        text-decoration: none;
+        background: #e91e63;
+        color: white;
+        border: 0;
+        outline: 0;
+        border-radius: 30px;
+        padding: 10px 20px;
+        cursor: pointer;
+
+}
+
 
 
