--- a/public/login.css
+++ b/public/login.css
@@ -7,57 +7,41 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif; 
 }
+body{
+    background: url(loginpg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden;
+}
 
 section{
-    position:relative;
+    position:absolute;
     width:100%;
     height: 100vh;
     display:flex;
+    left: 50%;
+    
 }
 
-section .imgBx{
-    position:relative;
-    width:50%;
-    height: 100%;
 
-}
-section .imgBx:before{
-    content:'';
-    position: absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    background:linear-gradient(225deg,#e91e63,#03a9f4);
-    z-index:1;
-    mix-blend-mode: screen;
- }
-section .imgBx img{
-    position: absolute;
-    top:0;
-    left:0;
-    width: 100%;
-    height:100%;
-    object-fit: cover;
-} 
 
 
 section .contentBx .formBx h2{
-    color:#607dbb;
+    color:#0f1c38;
     font-weight: 600;
     font-size: 1.5rem;
     text-transform: uppercase;
     margin-bottom: 20px;
     display: inline-block;
     letter-spacing: 1px;
-    border-bottom:4px solid #ff4584;
+    border-bottom:4px solid #ef427b;
 }
 
 section .contentBx .formBx .inputBx {
     margin-bottom: 20px;
 }
 section .contentBx .formBx .inputBx span{
-    color:#607db8;
+    color:#18233a;
     font-weight: 300;
     font-size: 16px;
    
@@ -70,24 +54,25 @@ section .contentBx .formBx .inputBx input{
     padding: 10px 20px;
     outline: none;
     font-weight: 400;
-    border: 1px solid #607d8b;
+    border: 1px solid #212b31;
     font-size: 16px;
     letter-spacing: 1px;
-    color: #607d8b;
+    color: #324249;
     background: transparent;
     border-radius: 30px;
 }
 
 section .contentBx .formBx .inputBx input[type="submit"]{
+    
     background:#ff4584;
-    color:#fff;
+    color:#ffffff;
     outline:none;
     border:none;
     font-weight: 500;
     cursor:pointer;
 }
 section .contentBx .formBx .inputBx input[type="submit"]:hover{
-    background:#f53677 ;
+    background:#d83c72 ;
 }
 
 section .contentBx .formBx .inputBx p{
@@ -121,11 +106,11 @@ section .contentBx{
 section .contentBx .formBx{
     width:50%;
     padding:40px;
-    background:rgb(255 255 255/0.9) ;
+    background:rgb(199, 195, 236) ;
     margin:50px;
 }
 .i{
-    color: #607db8;
+    color: #1a2333;
     
 }
 .fa{
@@ -145,6 +130,9 @@ section .contentBx .formBx{
     position:absolute;
     left: 65%; 
     top:40px;
-    color:#f53677;
+    color:#31111c;
 }
-
+body{
+    background-color: rgb(12, 10, 40);
+    background-color: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(5,12,55,1) 34%, rgba(11,23,25,1) 85%);
+}
