--- a/src/templates/views/home2.ejs
+++ b/src/templates/views/home2.ejs
@@ -10,6 +10,23 @@
 </head>
 <body>
     
+
+<div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="animate-charcter"> Hey!!!
+            <br>
+            Do you wanna borrow? 
+            <br>
+            Or
+            <br>
+            Lend your Item?
+        </h3>
+      </div>
+    </div>
+  </div>
+  
+  
        
    
    
