--- a/src/templates/views/lend.ejs
+++ b/src/templates/views/lend.ejs
@@ -11,44 +11,77 @@
 </head>
 
 <body>
-    
-
-    <form action="/profile/:<%=user._id%>/lend" method="post" id="form_lend">
-            <input name="cat" type="text" placeholder="category" required />
-            <input name="name" type="text" placeholder="objectname" required />
-            <input name="price" type="text" placeholder="Amount" required />
-            <input name="time" type="date" placeholder="time duration" required />
-            <input name="username" type="checkbox" id="Name" value="<%=user.name%>" required />
-            <input name="userphone" type="checkbox" value="<%=user.phone%>" required />
-            <input name="userid" type="checkbox" value="<%=user._id%>" required />
-            <button id="btn" type="submit" onclick="openPopup()">lend your item</button>
-            <div class="popup" id="popup">
-                <i class="fa-solid fa-check"></i>
-
-                <div class="content">
-                    <h2>Item lended Successfully</h2>
-                    <p>Thank you for lending item!</p>
-                    <button onclick="closePopup()">OK</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
   
 
+  <div>
+    <button class="button-34"  onclick="history.back()">🔙</button>
+  </div>
 
-    <script type="text/javascript">
 
-        let popup = document.getElementById("popup");
-        function openPopup() {
-            popup.classList.add("open-popup")
-        }
-        function closePopup() {
-            popup.classList.remove("open-popup")
-            document.getElementById("form_lend").reset();
-        }
+      <div class="main">
+        <div class="register">
+            <h2>Welcome, plz fill the form to lend your items </h2>
+            <form id="register"  method="post"  action="/profile/:<%=user._id%>/lend">
+                <label >Objectname:</label>
+                <br>
+                <input type="text" name="name" id="name" placeholder="Enter Objectname" required/>
+                  <br><br>
+                  <label for="category" name="cat" id="name"  >Category :</label>
+                  <br>
+                  <select id="category">
+                    <option value="Electronics">Electronics</option>
+                    <option value="Stationary">Stationary</option>
+                    <option value="Clothing">Clothing</option>
+                    <option value="Books">Books</option>
+                    <option value="Bicycle">Bicycle</option>
+                  </select>
+                  <br>
+                  <!-- <input name="cat" type="text" id="name" placeholder=" Enter Category" required/> -->
+                  <br>
+                  <label >Amount :</label>
+                  <br>
+                 <input name="price" type="text" id="name" placeholder="Enter Price" required/>
+                 <br><br>
+                 <label >Return Date:</label>
+                 <br>
+                 <input name="time"  type="date" id="name" placeholder="time duration" required/>
+                 <br><br>
+                 <label >Check here to share your details!</label>
+                 <br>
+                 <input name="userid" type="checkbox" id="userid" value="<%=user._id%>" required/>
+                    <br><br>
+                <input type="submit" value="Submit" name="submit" id="submit" onclick="openPopup()">
+        
+                 <div class="popup" id="popup">
 
-    </script>
+            <i class="fa-solid fa-check"></i>
+    
+            <div class="content">
+                <h2>Item lended Successfully</h2>
+                <p>Thank you for lending item!</p>
+                <button onclick="closePopup()">OK</button>
+            </div>
+        </div>
+
+                  
+            </form>
+
+        </div>
+      </div>    
+      
+
+   
 </body>
+</html>
+
+   
+   <script src="../jq/jquery.js" type="text/javascript"></script>
+   <script src="../js/bootstrap.js" type="text/javascript"></script>
+
+
+
+
+</body>
+
 </html>
 
