--- a/src/templates/views/login.ejs
+++ b/src/templates/views/login.ejs
@@ -13,9 +13,9 @@
 <body>
    <section>
  
-    <div class="imgBx">
-        <img src="loginimage.jpg" alt="">
-    </div>
+    <!-- <div class="imgBx">
+        <img src="loginback.jpg" alt="">
+    </div> -->
     <div class="contentBx">
         <div class="formBx">
             <%if(message!=''){%>
@@ -26,27 +26,34 @@
             
             <h2>login</h2>
             <form action="/login" method="post" autocomplete="off">
-                <div class="inputBx">
-                    <div class="i"> 
+                   <div class="inputBx">
+                                                <div class="i"> 
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                          </div>
+                                                 </div>
                     <span>Email</span>
                     <input type="text"placeholder="Email" name="email" required/>
-                </div>
-                <div class="inputBx">
-                    <div class="i"> 
-                        <i class="fas fa-lock"></i>
-   
                    </div>
-                    <span>Password</span>
-                    <input type="text" name="password" placeholder="Password" required/>
-                </div>
+
+
+                                                <div class="inputBx">
+                                                        <div class="i"> 
+                                                             <i class="fas fa-lock"></i>
+                                                        </div>
+                                                            <span>Password</span>
+                                                     <input type="text" name="password" placeholder="Password" required/>
+                                                 </div>
+
+
                 <div class="inputBx">
                     <input type="submit" value="Login" >
                 </div>
+
+
                 <div class="inputBx">
                    <p>Don't have an account?<a href="/signup">Sign up</a></p>
                 </div>
+
+
             </form>
         </div>
     </div>
