--- a/src/templates/views/profile.ejs
+++ b/src/templates/views/profile.ejs
@@ -5,29 +5,143 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/profile.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Document</title>
 </head>
 <body>
    
     <!-- ..................................................... -->
     
-   <h5><%=user.name%></h5>
+
+    
+   <!-- <h5><%=user.name%></h5>
    <ul>
     <li><%=user.name%></li>
     <li>account balance</li>
     <li>address</li>
-    <li><%=user.phone%></li>
-    <button type="button" class="btn btn-secondary btn-lg"><a href="/profile/<%=user._id%>/borrowstore">borrow</a></button>
-    <li><a href="/<%=user._id%>/userstore">lended items</a></li>
+    <li><%=user.phone%></li> -->
+
+    <!-- <button type="button" class="btn btn-secondary btn-lg"><a href="/profile/<%=user._id%>/borrowstore">borrow</a></button> -->
+    <!-- <li><a href="/<%=user._id%>/userstore">lended items</a></li> -->
+
+    
+    <div>
+      <button class="button-34" onclick="history.back()">🔙</button>
+    </div>
+    
+    
+    <div class="borrow">
+      <button class="bt"><a href="/profile/<%=user._id%>/borrowstore"> My Borrowed Items</a></button>
+      <button class="bt2"><a href="/<%=user._id%>/userstore"> My Lended Items</a></button>
+    </div>
+  
+
     
    </ul>
 
 
-   <form action="/profile" method="post">
-    <input type="text" value="" placeholder="Dinesh Kumar Paliwal">
-   </form>
+   
+    
+
+   
+    <div>
+      <i class="fas fa-user fa-lg"></i>
+    </div>
+
+    <div class="vl"></div>
+   
+
      
+
+   <div class="main">
+    <div class="register">
+        <h2>Update your profile </h2>
+        
+        <hr>
+
+
+        <form id="register"  method="post"  action="/profile/<%=user._id%>/update" autocomplete="off">
+
+            <label > User Name:</label>
+            
+            <input type="text" name="name" id="name" placeholder="<%=user.name%>" >
+              <br><br>
+              <hr>
+ 
+              <label >Registration No.:</label>
+              
+              <input type="text" name="Registration" id="Registration" placeholder="<%=user.Registration%>" >
+                <br><br>
+                <hr>
+
+              <label >Phone No.:</label>
+            
+            <input type="text" name="Phone" id="Phone" placeholder="+91-<%=user.phone%>" >
+              <br><br>
+              <hr>
+
+              <label for="Year"  id="Current_Year" >Current Year: </label>
+              
+              <select name="Year" id="Year">
+                <option value=""><%=user.Year%></option>
+                <option value="1" type="text" >1st Year</option>
+                <option value="2" type="text">2nd Year</option>
+                <option value="3" type="text">3rd Year</option>
+                <option value="Final" type="text">Final Year</option>
+                
+              </select>
+              <br><br>
+              <hr>
+             
+           
+
+              <label for="Hostel"  >Hostel:</label>
+              
+              <select name="Hostel"  id="Hostel">
+                <option value=""><%=user.Hostel%></option>
+                <option  value="SVBH">SVBH</option>
+                <option  value="P.D.">P.D. Tandon</option>
+                <option  value="Tilak">Tilak Hostel</option>
+                <option  value="Patel">Patel Hostel</option>
+                <option  value="Malviya">Malviya Hostel</option>
+                <option  value="KNGH">KNGH</option>
+                <option  value="DJ">DJ Hostel</option>
+                
+              </select>
+              <br><br>
+              <!-- <input name="cat" type="text" id="name" placeholder=" Enter Category" required/> -->
+              
+              <hr>
+               
+              <label for="Gender"  >Gender</label>
+              
+              <select name="Gender" id="Gender">
+                <option value=""><%=user.Gender%></option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+                
+                
+              </select>
+   <br>
+   <hr>
+             
+              
+           
+
+
+             <!-- <label >Check here to share your details!</label>
+             <br>
+             <input name="userid" type="checkbox" id="userid" value="<%=user._id%>" required/>
+                <br><br> -->
+
+
+            <input type="submit" value="Save" name="save" id="submit" class="save">
+    
+             
+
+              
+        </form>
 
   
    <script src="../jq/jquery.js" type="text/javascript"></script>
